# clarity

./: LICENSE  README.md  __init__.py  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  deps.py
api/endpoints/: __init__.py  auth.py  insights.py  patterns.py  users.py
api/middleware/: __init__.py  auth.py  cache.py  rate_limit.py
api/routers/: __init__.py  v1.py  v2.py
config/: development.py  init.py  production.py  settings.py  testing.py
core/: __init__.py  database.py
core/engine/: __init__.py  analyzer.py  collector.py  processor.py
core/patterns/: __init__.py  behavior.py  financial.py  temporal.py
core/processors/: __init__.py
core/processors/apps/: __init__.py  browser.py  ide.py  messaging.py  terminal.py
core/processors/integrations/: __init__.py
core/processors/integrations/calendar/: __init__.py  google.py  outlook.py
core/processors/integrations/financial/: __init__.py  plaid.py  stripe.py
core/processors/integrations/productivity/: __init__.py  github.py  jira.py  slack.py
core/processors/system/: __init__.py  cpu.py  memory.py  network.py
data/: __init__.py
data/collector/: __init__.py  hooks.py  watchers.py
data/storage/: __init__.py  encrypted.py  local.py
data/transforms/: __init__.py  cleaners.py  normalizers.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
migrations/: init.py
migrations/versions/: 001_initial.py
ml/: __init__.py
ml/features/: __init__.py  extractors.py  processors.py
ml/inference/: __init__.py  pipeline.py  predictors.py
ml/models/: __init__.py  attention.py  clustering.py  sequence.py
ml/training/: __init__.py  dataloaders.py  trainers.py
scripts/: build.sh  deploy.sh  setup.sh
tests/e2e/: test_dashboard.py  test_workflow.py
tests/integration/: test_api.py  test_collectors.py  test_storage.py
tests/unit/: test_engine.py  test_ml.py  test_processors.py
ui/: __init__.py
ui/assets/fonts/: fonts.css
ui/assets/icons/: DashboardIcon.tsx  InsightIcon.tsx  index.ts
ui/assets/styles/: components.css  globals.css  layouts.css  typography.css  variables.css
ui/components/: __init__.py
ui/components/charts/: InsightChart.tsx
ui/components/insights/: InsightCard.tsx  InsightList.tsx
ui/components/shared/: Header.tsx
ui/pages/: __init__.py
ui/pages/dashboard/: index.tsx
ui/pages/insights/: index.tsx
ui/pages/settings/: index.tsx
ui/state/: __init__.py  actions.ts  store.ts
utils/: __init__.py
utils/crypto/: __init__.py  encryption.py  hashing.py
utils/helpers/: __init__.py  dates.py  formatting.py  validation.py
utils/monitoring/: __init__.py  logging.py  metrics.py
