[tool.poetry]
name = "clarity"
version = "0.1.0"
description = "AI Resource Compass - Personal efficiency dashboard"
authors = ["Clarity Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.0"
alembic = "^1.11.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
torch = "^2.0.0"
plaid-python = "^15.0.0"
psycopg2-binary = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.0"
pylint = "^2.17.0"
pytest-cov = "^4.1.0"
