[tool.poetry]
name = "clarity"
version = "0.1.0"
description = "AI Resource Compass - Personal efficiency dashboard that shows you exactly where your time and money are going"
authors = ["Clarity Team <team@claritys.xyz>"]
license = "MIT"
readme = "README.md"
homepage = "https://claritys.xyz/"
repository = "https://github.com/clairtydotxyz/clarity"
keywords = ["productivity", "analytics", "machine-learning", "dashboard", "efficiency"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.0"
alembic = "^1.11.0"
pydantic = {extras = ["email"], version = "^2.0.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
celery = "^5.3.0"
sentry-sdk = "^1.30.0"
prometheus-client = "^0.17.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
torch = "^2.0.0"
transformers = "^4.30.0"
plaid-python = "^15.0.0"
stripe = "^6.0.0"
slack-sdk = "^3.21.0"
google-auth = "^2.22.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.95.0"
python-gitlab = "^3.15.0"
jira = "^3.5.0"
psutil = "^5.9.0"
pyinstrument = "^4.5.0"
py-spy = "^0.3.14"
structlog = "^23.1.0"
python-json-logger = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.1"
pytest-env = "^1.0.0"
pytest-xdist = "^3.3.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.0"
pylint = "^2.17.0"
flake8 = "^6.1.0"
bandit = "^1.7.0"
safety = "^2.3.0"
pre-commit = "^3.3.0"
bump2version = "^1.0.1"
mkdocs = "^1.5.0"
mkdocs-material = "^9.1.0"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[tool.poetry.scripts]
clarity = "clarity.cli:main"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = "C0111,R0903,C0103"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=clarity --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
